<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PayPass Reader</string>
    <string name="error_nfc_not_avail">Brak karty zgodnej z NFC</string>
    <string name="ui_nfcid">NFC ID</string>
    <string name="ui_blz">BLZ</string>
    <string name="ui_konto">Konto</string>
    <string name="ui_betrag">Betrag</string>
    <string name="error_nfc_comm">Fehler bei NFC-Kommunikation - falscher Kartentyp!</string>
    <string name="error_nfc_comm_cont">Fehler beim kommunizieren mit NFC-Tag: </string>
    <string name="ui_kartennr">Kartennr.</string>
    <string name="ui_aktiviert">Aktiviert</string>
    <string name="ui_verfall">Ważna do</string>
    <string name="ui_head_card">- Karta -</string>
    <string name="ui_head_gkacc">- Verrechnungskonto -</string>
    <string name="ui_head_aid">- Features -</string>
    <string name="ui_pse">PSE</string>
    <string name="text_yes">Ja</string>
    <string name="text_no">Nein</string>
    <string name="ui_head_kk">- Kreditkarte -</string>
    <string name="ui_kk">Numer karty</string>
    <string name="ui_cardtype">Typ</string>
    <string name="error_card_unknown">Kartentyp unbekannt!</string>
    <string name="ui_transaktionen">Transaktionen</string>
    <string name="activity_transactions">Transaktionen</string>
    <string name="ui_notransactions">Keine Transaktionen gefunden!</string>
    <string name="ui_aid">AID</string>
    <string name="ui_owner">Właściciel</string>

</resources>