<?xml version="1.0" encoding="utf-8"?>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ui_head_card"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TableLayout
        android:id="@+id/tableLayout_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
            
        <TableRow
            android:id="@+id/tableRow_nfcid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/ui_nfcid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:text="@string/ui_nfcid"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/display_nfcid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />
        </TableRow>
        
        <TableRow
            android:id="@+id/tableRow_nfcid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/ui_aid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:text="@string/ui_aid"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/display_aid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />
        </TableRow>        

        <TableRow
            android:id="@+id/tableRow_typ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/ui_cardtype"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:text="@string/ui_cardtype"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/display_cardtype"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow_expiration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/ui_verfall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:text="@string/ui_verfall"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/display_verfall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />

        </TableRow>
        <TableRow
            android:id="@+id/tableRow_ccnr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/ui_kk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:text="@string/ui_kk"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/display_kknr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </TableRow>        
                <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/ui_owner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:text="@string/ui_owner"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/display_owner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </TableRow>   
        </TableLayout>

    <TextView
        android:id="@+id/raw_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
</ScrollView>